--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
@@ -5,7 +5,7 @@
              ng-model="vm.showComponents"
              ng-change="updateValidation(form, model)">
       <label ng-attr-for="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}">
-        <ue-label config="::config.label"></ue-label>
+        <ue-label config="::config.label" model="::model"></ue-label>
       </label>
   </wc-checkbox-wrapper>
 
