INTYG-5243: Fixat tooltips samt lagt till 3 nya intygsstatusar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
@@ -9,10 +9,13 @@
     <i ng-switch-when="is-007" class="material-icons wc-color-11">error_outline</i>
     <i ng-switch-when="is-008" class="material-icons wc-color-10">check</i>
     <i ng-switch-when="is-009" class="material-icons wc-color-11">error_outline</i>
-    <i ng-switch-when="is-010" class="icon-wc-ikon-02 icon-wc-18 wc-color-10"></i>
-    <i ng-switch-when="is-011" class="material-icons wc-color-10">check</i>
+    <i ng-switch-when="is-010" class="material-icons wc-color-11">error_outline</i>
+    <i ng-switch-when="is-011" class="material-icons wc-color-11">error_outline</i>
     <i ng-switch-when="is-012" class="material-icons wc-color-11">error_outline</i>
-    <i ng-switch-when="is-013" class="material-icons wc-color-10">check</i>
+    <i ng-switch-when="is-013" class="icon-wc-ikon-02 icon-wc-18 wc-color-10"></i>
+    <i ng-switch-when="is-014" class="material-icons wc-color-10">check</i>
+    <i ng-switch-when="is-015" class="material-icons wc-color-11">error_outline</i>
+    <i ng-switch-when="is-016" class="material-icons wc-color-10">check</i>
   </span>
   <span ng-switch="intygstatus.modal">
     <a ng-switch-when="true" ng-click="openModal()"><span ng-bind-html="intygstatus.text" /></a>
