--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -24,7 +24,12 @@
           intygstyp="{{intygType}}"
           wc-check-vardenhet vardenhet="{{viewState.enhetsId}}"
           ng-if="showSkickaButton()"
-          ng-click="send()">
+          ng-click="send()"
+          uib-popover="{{sendBtnTooltipText}}"
+          popover-trigger="mouseenter"
+          popover-popup-delay="300"
+          popover-append-to-body="true"
+          popover-placement="auto top">
     <i class="material-icons">email</i> <span dynamic-label key="{{intygType}}.button.send"></span>
   </button>
   <!-- Normal pdf-utskrift av signerat intyg  -->
@@ -39,7 +44,7 @@
           popover-popup-delay="300"
           popover-append-to-body="true"
           popover-placement="auto top">
-  <i class="material-icons">print</i> <span dynamic-label key="common.button.save.as.pdf"></span>
+    <i class="material-icons">print</i> <span dynamic-label key="common.button.save.as.pdf"></span>
   </button>
   <div id="downloadprintemployer" intygType="{{intygType}}" style="display:inline;">
     <div class="btn-group" ng-if="showEmployerPrintBtn()">
@@ -92,20 +97,24 @@
     <i class="material-icons">autorenew</i> Förnya
   </button>
 
-  <button type="button"
-          id="ersattBtn"
-          class="btn btn-primary"
-          ng-if="showErsattButton()"
-          ng-click="ersatt(viewState.intygModel)"
-          wc-check-vardenhet
-          vardenhet="{{viewState.enhetsId}}"
-          uib-popover="{{ersattBtnTooltipText}}"
-          popover-trigger="mouseenter"
-          popover-popup-delay="300"
-          popover-append-to-body="true"
-          popover-placement="auto top">
-    <i class="material-icons">swap_horiz</i> Ersätt
-  </button>
+  <div class="button-tooltip"
+       ng-class="{'disabled':ersattButtonDisabled}"
+       uib-popover="{{ersattBtnTooltipText}}"
+       popover-trigger="mouseenter"
+       popover-popup-delay="300"
+       popover-append-to-body="true"
+       popover-placement="auto top">
+    <button type="button"
+            id="ersattBtn"
+            class="btn btn-primary"
+            ng-if="showErsattButton()"
+            ng-click="ersatt(viewState.intygModel)"
+            ng-disabled="ersattButtonDisabled"
+            wc-check-vardenhet
+            vardenhet="{{viewState.enhetsId}}">
+      <i class="material-icons">swap_horiz</i> Ersätt
+    </button>
+  </div>
 
   <button type="button"
           id="makuleraBtn"
