--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -38,11 +38,12 @@
           id="downloadprint"
           class="btn btn-primary"
           intygstyp="{{intygType}}"
-          ng-click="print(viewState.intygModel, false)"
+          ng-click="print(viewState.intygModel, false);printPopoverOpen=false"
           uib-popover="{{normalPrintBtnTooltipText}}"
           popover-trigger="mouseenter"
           popover-popup-delay="300"
           popover-append-to-body="true"
+          popover-is-open="printPopoverOpen"
           popover-placement="auto top">
     <i class="material-icons">print</i> <span dynamic-label key="common.button.save.as.pdf"></span>
   </button>
@@ -74,8 +75,9 @@
             popover-trigger="mouseenter"
             popover-popup-delay="300"
             popover-append-to-body="true"
+            popover-is-open="arbetsprintPopoverOpen"
             popover-placement="auto top">
-          <a href="#" onClick="return false;" ng-click="print(viewState.intygModel, true)">
+          <a href="#" onClick="return false;" ng-click="print(viewState.intygModel, true);arbetsprintPopoverOpen=false">
             <span dynamic-label key="common.button.save.as.pdf.minimal"></span>
           </a>
         </li>
