--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
@@ -3,7 +3,8 @@
       <input type="checkbox"
              ng-attr-id="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}"
              ng-model="vm.showComponents"
-             ng-change="updateValidation(form, model)">
+             ng-change="updateValidation(form, model)"
+             ng-false-value="undefined">
       <label ng-attr-for="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}">
         <ue-label config="::config.label" model="::model"></ue-label>
       </label>
