--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -15,7 +15,7 @@
           <img ng-hide="model.acceptprogressdone" ng-src="/img/ajax-loader-small-green.gif"/>
           <span dynamic-label key="{{button1text}}"></span>
         </button>
-        <button type="button" id="{{button2id}}" class="btn btn-secondary" ng-click="button2click()">
+        <button type="button" id="{{button2id}}" class="btn btn-default" ng-click="button2click()">
           <span dynamic-label key="{{button2text}}"></span>
         </button>
         <button type="button" id="{{button3id}}" ng-if="button3visible" class="btn btn-secondary" ng-click="button3click()">
