--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
@@ -37,6 +37,11 @@
 
     <wc-deprecated-intygstype-message message-suffix="utkastheader" intygs-type="{{::utkastViewState.common.intyg.type}}"></wc-deprecated-intygstype-message>
 
+    <!-- Integration deleted message -->
+    <div id="integration-deleted" ng-if="utkastViewState.common.deleted">
+      Utkastet är raderat och borttaget från Webcert.
+    </div>
+
     <!-- Total fail error messages -->
     <div id="error-panel" class="intyg-error-panel"
          ng-show="utkastViewState.common.doneLoading && utkastViewState.common.error.activeErrorMessageKey && !utkastViewState.common.deleted">
