INTYG-5589: wc-typo-06 på kompletteringsbegäran rubrik.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
@@ -3,7 +3,7 @@
     <wc-alert-message
          alert-severity="komplettering"
          ng-attr-id="{{'inline-komplettering-' + frageId + '-' + $index}}">
-        <div class="inline-komplettering-text"><strong>Kompletteringsbegäran: </strong><p>{{komplettering.text}}</p></div>
+        <div class="inline-komplettering-text"><span class="inline-komplettering-heading">Kompletteringsbegäran: </span><p>{{komplettering.text}}</p></div>
     </wc-alert-message>
   </wc-bottom-fadeout>
 </div>
