INTYG-4548: Fördröjd kompilering av ue-kategori med spinner under tiden

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
@@ -7,5 +7,5 @@
       <wc-help help-key="{{::config.label.helpKey}}"></wc-help>
     </h3>
   </div>
-  <ue-render-components class="ue-kategori__body" form="::form" config="::config.components" model="::model" />
+  <wc-spinner class="ue-kategori__spinner" show-spinner="true"></wc-spinner>
 </div>
