--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
@@ -11,7 +11,7 @@
              ng-click="back()">Tillbaka</a>
         </div>
 
-        <wc-utkast-status utkast-view-state="utkastViewState"></wc-utkast-status>
+        <wc-utkast-status utkast-view-state="utkastViewState" cert-form="certForm"></wc-utkast-status>
       </div>
       <div class="flex-row padding-top-small">
         <div class="flex-col-max">
