--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -6,8 +6,10 @@
         </h3>
     </div>
     <div class="modal-body">
-        <span dynamic-label key="{{bodyText}}"></span>
-        <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
+      <wc-alert-message ng-if="model.observandumId" alert-severity="warning" alert-message-id="{{model.observandumId}}"></wc-alert-message>
+
+      <span dynamic-label key="{{bodyText}}"></span>
+      <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
     </div>
     <div class="modal-footer">
       <div class="form-inline">
