INTYG-5830: Nollställer intygloaded och gömmer knapparna med ng-cloak till den valideras första gången

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -1,4 +1,4 @@
-<div class="white-space-no-wrap">
+<div class="white-space-no-wrap" ng-cloak>
 
   <button type="button"
           intygstyp="{{intygType}}"
