INTYG-5908: Gömmer högersida såväl som utkastvyn när utkast är deleted

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -39,7 +39,7 @@
     </form>
   </div>
 
-  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
+  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig" ng-hide="viewState.common.deleted">
     <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
   </div>
 
