INTYG-5960: Slå av ng-animate för vissa element

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
@@ -1,4 +1,4 @@
-<div ng-if="getKompletteringar().length > 0">
+<div ng-if="getKompletteringar().length > 0" class="ng-animate-disabled">
   <wc-bottom-fadeout color="02" ng-repeat="komplettering in getKompletteringar()">
     <wc-alert-message
          alert-severity="komplettering"
