--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.html
@@ -11,6 +11,7 @@
       <!-- show error for: {{cvk}} -->
 
       <ue-validation-list
+          class="ng-animate-disabled"
           field-type="{{cvk.type}}"
           warnings="validation.warningMessagesByField[cvk.key]"
           validations="validation.messagesByField[cvk.key]">
