--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -5,7 +5,7 @@
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid edit-form">
 
-    <form name="certForm" novalidate autocomplete="off" wc-auto-save>
+    <form name="certForm" novalidate autocomplete="off" wc-auto-save class="ng-animate-disabled">
       <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
 
         <wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading">
