INTYG-6008: Laddar ärenden samtidigt som intyget.
Tagit bor isSent (som ej använts någonstans)  från wcSupportPanelManager så den kan köras direkt istället för att vänta på intyget.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -1,5 +1,5 @@
 <div class="wc-page-header">
-  <wc-spinner label="common.load.certificate" show-spinner="!intygHeaderViewState.intygLoaded">
+  <wc-spinner label="common.load.certificate" show-spinner="!intygHeaderViewState.intygLoaded || !intygHeaderViewState.arendenLoaded">
     <div class="centered-constrained-content">
 
       <!-- page error message -->
