--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,8 +1,8 @@
 <div ui-view="header"></div>
-<div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intyg.type}}">
+<div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intyg.type}}" ng-show="!viewState.common.activeErrorMessageKey">
 
 
-  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
+  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
     <div class="{{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
       <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
 
