INTYG-4548: Optimering av watches för visning av kompletteringar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/wcInlineKomplettering/wcInlineKomplettering.directive.html
@@ -1,5 +1,5 @@
-<div ng-if="getKompletteringar().length > 0" class="ng-animate-disabled">
-  <wc-bottom-fadeout color="02" ng-repeat="komplettering in getKompletteringar()">
+<div ng-if="kompletteringar.length > 0" class="ng-animate-disabled">
+  <wc-bottom-fadeout color="02" ng-repeat="komplettering in kompletteringar">
     <wc-alert-message
          alert-severity="komplettering"
          ng-attr-id="{{'inline-komplettering-' + frageId + '-' + $index}}">
