--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkastUE.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkastUE.html
@@ -1,3 +1,3 @@
 <div>
-  <ue-render-components form="::certForm" config="::ueConfig" model="::model"></ue-render-components>
+  <ue-render-components-spinner form="::certForm" config="::ueConfig" model="::model"></ue-render-components-spinner>
 </div>
