--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSigningDoctor/wcFieldSigningDoctor.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcFieldSigningDoctor/wcFieldSigningDoctor.directive.html
@@ -1,3 +1,7 @@
-<div ng-show="show" wc-field field-label="draft.signingdoctor" field-help-text="draft.helptext.signingdoctor">
-  <span id="signingDoctor">{{hospName}}</span>
+<div ng-show="show" class="wc-field-signing-doctor">
+  <div class="left">
+    <span class="header">Ansvarig läkare för intyget</span>
+    <span class="name" id="signingDoctor">{{hospName}}</span>
+  </div>
+  <div class="right"><i class="material-icons">assignment_ind</i></div>
 </div>
