--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
@@ -1,12 +1,14 @@
 <div class="modal-header">
   <h3>Alla händelser</h3>
 </div>
-<div class="modal-body">
-  <div ng-repeat="status in statuses">
-    {{status.timestamp | date : 'yyyy-MM-dd HH:mm'}}
-    <wc-intyg-status-modal-link source="status.text"></wc-intyg-status-modal-link>
+<wc-bottom-fadeout>
+  <div class="modal-body">
+    <div ng-repeat="status in statuses">
+      {{status.timestamp | date : 'yyyy-MM-dd HH:mm'}}
+      <wc-intyg-status-modal-link source="status.text"></wc-intyg-status-modal-link>
+    </div>
   </div>
-</div>
+</wc-bottom-fadeout>
 <div class="modal-footer">
   <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
