--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -4,37 +4,40 @@
     <span dynamic-label key="{{titleId}}"></span>
   </h3>
 </div>
-<div class="modal-body">
-  
-  <wc-alert-message alert-severity="info" alert-message-id="label.makulera.body.common-footer"></wc-alert-message>
 
-  <div class="form-group">
-    <span dynamic-label key="{{model.bodyTextId}}"></span>
-    <span ng-if="model.hasUnhandledArenden" dynamic-label key="label.makulera.body.has-arenden.addition"></span>
-  </div>
-  
-  <div class="form-group makulera-choices" ng-if="model.choices.length > 0">
-    <strong>Ange för <span dynamic-label key="{{model.recipient}}"></span> varför du makulerar intyget: </strong>
-    <!-- <span ng-if="model.isFkIntyg"><span wc-help-chevron help-text-key="intyg.makulera.help"></span>
-    <span wc-help-chevron-text help-text-key="intyg.makulera.help"></span></span> -->
-    <br/>
-    <div ng-repeat="reason in model.choices" style="margin-top:5px;">
-      <wc-radio-wrapper>
-        <input id="reason-{{reason.value}}" name="reason-{{reason.value}}" type="radio"
-                 ng-model="model.makuleraModel.reason" ng-value="reason.value">
-        <label ng-attr-for="reason-{{reason.value}}">
-          {{reason.label}}
-        </label>
-      </wc-radio-wrapper>
-      <div class="form-group fold-animation" ng-if="model.makuleraModel.reason == reason.value">
-        <textarea id="clarification-{{reason.value}}" rows='3' class='form-control'
-                  ng-model="model.makuleraModel.clarification[reason.value]" placeholder="{{reason.placeholder}}">
-        </textarea>
+<wc-bottom-fadeout>
+  <div class="modal-body">
+
+    <wc-alert-message alert-severity="info" alert-message-id="label.makulera.body.common-footer"></wc-alert-message>
+
+    <div class="form-group">
+      <span dynamic-label key="{{model.bodyTextId}}"></span>
+      <span ng-if="model.hasUnhandledArenden" dynamic-label key="label.makulera.body.has-arenden.addition"></span>
+    </div>
+
+    <div class="form-group makulera-choices" ng-if="model.choices.length > 0">
+      <strong>Ange för <span dynamic-label key="{{model.recipient}}"></span> varför du makulerar intyget: </strong>
+      <!-- <span ng-if="model.isFkIntyg"><span wc-help-chevron help-text-key="intyg.makulera.help"></span>
+      <span wc-help-chevron-text help-text-key="intyg.makulera.help"></span></span> -->
+      <br/>
+      <div ng-repeat="reason in model.choices" style="margin-top:5px;">
+        <wc-radio-wrapper>
+          <input id="reason-{{reason.value}}" name="reason-{{reason.value}}" type="radio"
+                   ng-model="model.makuleraModel.reason" ng-value="reason.value">
+          <label ng-attr-for="reason-{{reason.value}}">
+            {{reason.label}}
+          </label>
+        </wc-radio-wrapper>
+        <div class="form-group fold-animation" ng-if="model.makuleraModel.reason == reason.value">
+          <textarea id="clarification-{{reason.value}}" rows='3' class='form-control'
+                    ng-model="model.makuleraModel.clarification[reason.value]" placeholder="{{reason.placeholder}}">
+          </textarea>
+        </div>
       </div>
     </div>
-  </div>
 
-</div>
+  </div>
+</wc-bottom-fadeout>
 
   <div class="modal-footer">
     <button type="button" id="{{button1id}}" class="btn btn-secondary"
