INTYG-5616: Lagt in gradient längst ner på intygen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -3,6 +3,10 @@
 
 <div class="webcert-workarea-hflex-container centered-constrained-content" id="edit-{{viewState.common.intyg.type}}">
 
+  <div class="bottom-fadeout-gradient wc-color-27">
+    <div></div>
+  </div>
+
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid edit-form">
 
     <form name="certForm" novalidate autocomplete="off" wc-auto-save class="ng-animate-disabled">
