--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,6 +1,9 @@
 <div ui-view="header"></div>
 <div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intyg.type}}" ng-show="!viewState.common.activeErrorMessageKey">
 
+  <div class="bottom-fadeout-gradient wc-color-27">
+    <div></div>
+  </div>
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
     <div class="{{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
@@ -18,7 +21,6 @@
       </wc-spinner><!-- entire intyg -->
     </div><!--  spinner end -->
   </div>
-
 
   <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
     <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
