--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <wc-alert-message ng-if="model.observandumId" alert-severity="warning" alert-message-id="{{model.observandumId}}"></wc-alert-message>
 
-        <span dynamic-label key="{{bodyText}}"></span>
+        <span ng-bind-html="bodyText"></span>
         <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
       </div>
     </wc-bottom-fadeout>
