--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
@@ -1,4 +1,5 @@
 <div class="modal-header">
+  <button type="button" class="close" ng-click="$close()">×</button>
   <h3>Alla händelser</h3>
 </div>
 <wc-bottom-fadeout>
