--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusModal.template.html
@@ -9,5 +9,5 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" id="confirmationOkButton" ng-click="$close()">Stäng</button>
+  <button type="button" class="btn btn-default" id="confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
