--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.html
@@ -5,24 +5,42 @@
             <span dynamic-label key="{{titleId}}"></span>
         </h3>
     </div>
-    <div class="modal-body">
-      <wc-alert-message ng-if="model.observandumId" alert-severity="warning" alert-message-id="{{model.observandumId}}"></wc-alert-message>
+    <wc-bottom-fadeout>
+
+      <div class="modal-body">
+        <wc-alert-message ng-if="model.observandumId" alert-severity="warning" alert-message-id="{{model.observandumId}}"></wc-alert-message>
 
       <span dynamic-label key="{{bodyText}}"></span>
       <span id="{{bodyId}}" dynamic-label key="{{bodyTextId}}"></span>
     </div>
     <div class="modal-footer">
       <div class="form-inline">
-        <button type="button" id="{{button1id}}" class="btn btn-primary" ng-disabled="!model.acceptprogressdone" ng-click="button1click()">
-            <i ng-hide="model.acceptprogressdone" class="icon-wc-ikon-02 animate-spin"></i>
-          <span dynamic-label key="{{button1text}}"></span>
-        </button>
-        <button type="button" id="{{button2id}}" class="btn btn-default" ng-click="button2click()">
-          <span dynamic-label key="{{button2text}}"></span>
-        </button>
-        <button type="button" id="{{button3id}}" ng-if="button3visible" class="btn btn-secondary" ng-click="button3click()">
-          <span dynamic-label key="{{button3text}}"></span>
-        </button>
+          <div class="button-wrapper">
+              <wc-button
+                      btn-id="{{button1id}}"
+                      btn-class="btn btn-primary"
+                      btn-click="button1click()"
+                      btn-disabled="!model.acceptprogressdone"
+                      loading="!model.acceptprogressdone"
+              >
+                  <span dynamic-label key="{{button1text}}"></span>
+              </wc-button>
+              <wc-button
+                      btn-id="{{button2id}}"
+                      btn-class="btn btn-default"
+                      btn-click="button2click()"
+              >
+                  <span dynamic-label key="{{button2text}}"></span>
+              </wc-button>
+              <wc-button
+                      ng-if="button3visible"
+                      btn-id="{{button3id}}"
+                      btn-class="btn btn-secondary"
+                      btn-click="button3click()"
+              >
+                  <span dynamic-label key="{{button3text}}"></span>
+              </wc-button>
+          </div>
         <div class="webcert-top-padding-section" ng-show="model.showerror">
           <wc-alert-message alert-severity="danger" class="alert-dialog-error"
                             alert-message-id="{{model.errormessageid}}">
