--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater/wcUtkastPatientAddressUpdater.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater/wcUtkastPatientAddressUpdater.directive.html
@@ -1,9 +1,12 @@
 <div class="wc-utkast-patient-address-updater" wc-authority="HANTERA_PERSONUPPGIFTER">
-  <button type="button" id="fetchPatientButton" class="btn btn-secondary" ng-click="onUpdateAddressClick()">
+  <button type="button"
+          id="fetchPatientButton"
+          class="btn btn-secondary"
+          ng-click="onUpdateAddressClick()"
+          ng-disabled="disableButton">
     <img ng-if="fetchingPatientData" ng-src="/img/loader-small.gif" /><i ng-if="!fetchingPatientData" class="glyphicon glyphicon-refresh"></i>
   </button>
   <span class="patient-address-updater-label">Hämta adressuppgifter från personuppgiftstjänsten</span>
-
   <wc-alert-message ng-show="fetchingPatientDataErrorKey"
                     alert-severity="warning"
                     alert-message-id="{{fetchingPatientDataErrorKey}}"></wc-alert-message>
