INTYG-6569: La till timeout check.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -68,7 +68,7 @@
             <wc-intyg-button-bar view-state="intygViewState"></wc-intyg-button-bar>
           </div>
         </div>
-        <wc-deprecated-intygstype-message message-suffix="intygheader" wc-authority request-origin="!UTHOPP" intygs-type="{{::intygViewState.common.intygProperties.type}}"></wc-deprecated-intygstype-message>
+        <wc-deprecated-intygstype-message timeout="true" message-suffix="intygheader" wc-authority request-origin="!UTHOPP" intygs-type="{{::intygViewState.common.intygProperties.type}}"></wc-deprecated-intygstype-message>
       </div>
     </div>
   </wc-spinner>
