INTYG-6396: Stängt av utskrifter för låsta utkast och makulerade intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
@@ -1,6 +1,8 @@
 <div class="white-space-no-wrap">
 
-  <button type="button"
+  <button
+          data-ng-if="showPrintBtn()"
+          type="button"
           id="skriv-ut-utkast"
           class="btn btn-primary"
           ng-click="print()"
