--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
@@ -16,6 +16,8 @@
     <i ng-switch-when="is-014" class="ng-animate-disabled material-icons wc-color-10">check</i>
     <i ng-switch-when="is-015" class="ng-animate-disabled material-icons wc-color-11">error_outline</i>
     <i ng-switch-when="is-016" class="ng-animate-disabled material-icons wc-color-10">check</i>
+    <i ng-switch-when="lus-01" class="ng-animate-disabled material-icons wc-color-11">error_outline</i>
+    <i ng-switch-when="lus-02" class="ng-animate-disabled material-icons wc-color-11">error_outline</i>
   </span>
   <span ng-switch="intygstatus.modal">
     <a ng-switch-when="true" class="ng-animate-disabled" ng-click="openModal()"><span ng-bind-html="intygstatus.text" /></a>
