--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div ng-if="::config.signingDoctor" wc-field-signing-doctor></div>
-  <a ng-attr-id="anchor-{{::config.categoryId|ueDomIdFilter}}" name="anchor.{{::config.categoryId}}"></a>
+  <a ng-attr-id="anchor-{{::config.categoryId|ueDomIdFilter|lowercase}}" name="anchor.{{::config.categoryId}}"></a>
   <div class="ue-kategori__heading" ng-if="::config.label.key">
     <h3>
       <span dynamic-label key="{{::config.label.key}}"></span>
