--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
@@ -28,7 +28,9 @@
     <i class="material-icons">print</i> <span dynamic-label key="common.button.save.as.pdf"></span>
   </button>
 
-  <button type="button"
+  <button
+          data-ng-if="showDeleteBtn()"
+          type="button"
           id="ta-bort-utkast"
           class="btn btn-secondary"
           ng-click="discard()"
@@ -38,5 +40,19 @@
           popover-append-to-body="true"
           popover-placement="auto top">
     <i class="material-icons">delete</i> <span dynamic-label key="common.delete"></span>
+  </button>
+
+  <button
+      data-ng-if="showMakuleraBtn()"
+      type="button"
+      id="makulera-utkast"
+      class="btn btn-secondary"
+      ng-click="makulera()"
+      uib-popover="{{makuleraBtnTooltipText}}"
+      popover-trigger="mouseenter"
+      popover-popup-delay="300"
+      popover-append-to-body="true"
+      popover-placement="auto top">
+    <i class="material-icons">delete</i> <span dynamic-label key="common.makulera"></span>
   </button>
 </div>
