INTYG-6987: Hantering av WC-F033 Godkänna intygsmottagare för WC (tvingande dialog vid signering + optional settings efter)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -1,5 +1,10 @@
 <div class="white-space-no-wrap" ng-cloak>
 
+  <wc-approve-receivers-button
+      intygtyp="intygType"
+      intygid="viewState.intygModel.id">
+  </wc-approve-receivers-button>
+
   <button type="button"
           intygstyp="{{intygType}}"
           id="createFromTemplateBtn"
