--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
@@ -2,6 +2,7 @@
 
   <button
       data-ng-if="showCopyBtn()"
+      data-ng-disabled="disabledCopyBtn()"
       type="button"
       id="copy-utkast"
       class="btn btn-primary"
