INTYG-5768: intygstyp är nu required i wc-authority för features och authorities

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -6,7 +6,7 @@
       cert-form="certForm"></wc-utkast-footer-sign>
 
   <!-- Vårdadmin -->
-  <div wc-authority="!SIGNERA_INTYG">
+  <div wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
     <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
     <wc-utkast-footer-notify
         wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
