--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastHeader/wcUtkastHeader.directive.html
@@ -5,7 +5,7 @@
 
       <!-- Status -->
       <div class="page-header-divider">
-        <div class="inline-block" wc-authority="NAVIGERING" ng-if="::backState">
+        <div class="inline-block" wc-authority="NAVIGERING" intygstyp="" ng-if="::backState">
           <a ng-click="back()"><i class="material-icons">arrow_back</i></a>
           <a id="tillbakaButton"
              ng-click="back()">Tillbaka</a>
