--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater/wcUtkastPatientAddressUpdater.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastPatientAddressUpdater/wcUtkastPatientAddressUpdater.directive.html
@@ -1,4 +1,4 @@
-<div class="wc-utkast-patient-address-updater" wc-authority="HANTERA_PERSONUPPGIFTER">
+<div class="wc-utkast-patient-address-updater" wc-authority="HANTERA_PERSONUPPGIFTER" intygstyp="model.typ">
   <button type="button"
           id="fetchPatientButton"
           class="btn btn-secondary"
