INTYG-7233: Döljer knappen "Godkänna intygsmottagare" i wc intyg header om intyget är makulerat.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -1,6 +1,7 @@
 <div class="white-space-no-wrap" ng-cloak>
 
   <wc-approve-receivers-button
+      ng-if="!CommonIntygViewState.isRevoked()"
       intygtyp="intygType"
       intygid="viewState.intygModel.id">
   </wc-approve-receivers-button>
