--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -136,11 +136,11 @@
           id="makuleraBtn"
           class="btn btn-secondary"
           ng-if="showMakuleraButton()"
-          ng-click="makulera(viewState.intygModel)"
+          ng-click="makuleraPopoverOpen=false;makulera(viewState.intygModel)"
           wc-check-vardenhet
           vardenhet="{{viewState.enhetsId}}"
           uib-popover="{{makuleraBtnTooltipText}}"
-
+          popover-is-open="makuleraPopoverOpen"
           popover-popup-delay="300"
           popover-append-to-body="true"
           popover-placement="auto top"
