--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkastHeader/wcUtkastButtonBar/wcUtkastButtonBar.directive.html
@@ -2,13 +2,13 @@
 
   <button
       data-ng-if="showCopyBtn()"
-      data-ng-disabled="disabledCopyBtn()"
+      data-ng-disabled="copyUtkastPopOverOpen=false;disabledCopyBtn()"
       type="button"
       id="copy-utkast"
       class="btn btn-primary"
       ng-click="copy()"
       uib-popover="{{copyBtnTooltipText}}"
-
+      popover-is-open="copyUtkastPopOverOpen"
       popover-popup-delay="300"
       popover-append-to-body="true"
       popover-placement="auto top">
@@ -16,13 +16,13 @@
   </button>
 
   <button
-          data-ng-if="showPrintBtn()"
+          data-ng-if="skrivUtUtkastPopOverOpen=false;showPrintBtn()"
           type="button"
           id="skriv-ut-utkast"
           class="btn btn-primary"
           ng-click="print()"
           uib-popover="{{printBtnTooltipText}}"
-
+          popover-is-open="skrivUtUtkastPopOverOpen"
           popover-popup-delay="300"
           popover-append-to-body="true"
           popover-placement="auto top">
@@ -34,9 +34,9 @@
           type="button"
           id="ta-bort-utkast"
           class="btn btn-secondary"
-          ng-click="discard()"
+          ng-click="deleteUtkastBtnPopOverOpen=false;discard()"
           uib-popover="{{deleteBtnTooltipText}}"
-
+          popover-is-open="deleteUtkastBtnPopOverOpen"
           popover-popup-delay="300"
           popover-append-to-body="true"
           popover-placement="auto top">
@@ -44,13 +44,13 @@
   </button>
 
   <button
-      data-ng-if="showMakuleraBtn()"
+      data-ng-if="makuleraUtkastBtnPopOverOpen=false;showMakuleraBtn()"
       type="button"
       id="makulera-utkast"
       class="btn btn-secondary"
       ng-click="makulera()"
       uib-popover="{{makuleraBtnTooltipText}}"
-
+      popover-is-open="makuleraUtkastBtnPopOverOpen"
       popover-popup-delay="300"
       popover-append-to-body="true"
       popover-placement="auto top">
