INTYG-7346: Fixade så modaler inte visas när man navigerar till nyare intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.html
@@ -21,6 +21,6 @@
   </span>
   <span ng-switch="intygstatus.modal">
     <a ng-switch-when="true" class="ng-animate-disabled" ng-click="openModal()"><span ng-bind-html="intygstatus.text" /></a>
-    <span ng-switch-when="false" class="ng-animate-disabled" ng-bind-html="intygstatus.text" />
+    <span ng-switch-when="false" class="ng-animate-disabled" bind-html-compile="intygstatus.text" />
   </span>
 </span>
